// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base config works correctly [server] 1`] = `
"
import eventStoreAdapter_constructor from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testAdapter.js\\"
const constructorBindFunction =
    (
      constructorFunction,
      compileTimeOptions,
      compileTimeImports,
      runTimeOptions,
      runTimeImports
    ) => constructorFunction(
      { ...compileTimeOptions, ...runTimeOptions },
      { ...compileTimeImports, ...runTimeImports }
    )
const idempotentFunction = value => value
const eventStoreAdapter_imports = {  }
const eventStoreAdapter_options = {
  \\"url\\": \\"http://test.test\\"
}
const eventStoreAdapter = constructorBindFunction.bind(null,
      eventStoreAdapter_constructor,
      eventStoreAdapter_options,
      eventStoreAdapter_imports
    )
    Object.assign(eventStoreAdapter, eventStoreAdapter_constructor)
    
export default eventStoreAdapter
"
`;

exports[`config with process.env works correctly 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"
const constructorBindFunction =
    (
      constructorFunction,
      compileTimeOptions,
      compileTimeImports,
      runTimeOptions,
      runTimeImports
    ) => constructorFunction(
      { ...compileTimeOptions, ...runTimeOptions },
      { ...compileTimeImports, ...runTimeImports }
    )
const idempotentFunction = value => value
const eventStoreAdapter_constructor = ((moduleOrFile) => {
  return interopRequireDefault(__non_webpack_require__(moduleOrFile)).default
})(process.env[\\"STORAGE_ADAPTER\\"])
const eventStoreAdapter_imports = {  }
const eventStoreAdapter_options = {
  \\"url\\": process.env[\\"STORAGE_OPTIONS_URL\\"]
}
const eventStoreAdapter = constructorBindFunction.bind(null,
      eventStoreAdapter_constructor,
      eventStoreAdapter_options,
      eventStoreAdapter_imports
    )
    Object.assign(eventStoreAdapter, eventStoreAdapter_constructor)
    
export default eventStoreAdapter
"
`;
